phong update fix percent, fix loi trang

--- a/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/file-orc-extract-progressing/ocr-progressing/ocr-progressing.component.html
+++ b/angular-ocr/src/app/modules/pages/folder-user/folder-user-list/file-orc-extract-progressing/ocr-progressing/ocr-progressing.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="ocrNode.ocring; else dangxuly">
+<ng-container *ngIf="ocrNode.ocring">
     <div class="flex flex-1 justify-between bg-white">
       <ng-container>
         <div>
@@ -14,42 +14,6 @@
     <span class="text-sm text-gray-400 mr-3">
       <span class="mr-3"> {{ ocrNode.ocring?.percent }}% </span>
     </span>
-        <ng-container *ngIf="ocrNode.ocring?.percent < 100; else success">
-          <!--        <ng-container *ngIf="!isPause; else play">-->
-          <!--        <span (click)="clickPause()" class="cursor-pointer">-->
-          <!--          <svg-->
-          <!--            class="inline text-gray-400"-->
-          <!--            fill="currentColor"-->
-          <!--            height="24"-->
-          <!--            viewBox="0 0 24 24"-->
-          <!--            width="24"-->
-          <!--            xmlns="http://www.w3.org/2000/svg"-->
-          <!--          >-->
-          <!--            <path-->
-          <!--              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"-->
-          <!--            ></path>-->
-          <!--            <path d="M13 9h2v6h-2zM9 9h2v6H9z"></path>-->
-          <!--          </svg>-->
-          <!--        </span>-->
-          <!--        </ng-container>-->
-          <!--        <ng-template #play-->
-          <!--        ><span (click)="clickPlay()" class="cursor-pointer">-->
-          <!--          <svg-->
-          <!--            class="inline text-red-400"-->
-          <!--            fill="currentColor"-->
-          <!--            height="24"-->
-          <!--            viewBox="0 0 24 24"-->
-          <!--            width="24"-->
-          <!--            xmlns="http://www.w3.org/2000/svg"-->
-          <!--          >-->
-          <!--            <path-->
-          <!--              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"-->
-          <!--            ></path>-->
-          <!--            <path d="m9 17 8-5-8-5z"></path>-->
-          <!--          </svg>-->
-          <!--        </span>-->
-          <!--        </ng-template>-->
-        </ng-container>
         <ng-template #success>
           <span class="cursor-pointer">
             <svg
@@ -68,82 +32,5 @@
           ></ng-template>
       </div>
     </div>
-    <ng-container *ngIf="ocrNode.ocring?.percent === 0; else progressPercent">
-      <mat-progress-bar mode="indeterminate" ></mat-progress-bar>
-    </ng-container>
-    <ng-template #progressPercent>
       <mat-progress-bar [value]="ocrNode.ocring?.percent" color="{{ color }}" max="100" mode="determinate"></mat-progress-bar>
-    </ng-template>
 </ng-container>
-<ng-template #dangxuly>
-  <div class="flex flex-1 justify-between bg-white">
-    <ng-container>
-      <div>
-    <span
-      class="xl:text-base lg:text-base md:text-sm font-extrabold overflow-ellipsis whitespace-nowrap overflow-hidden fadeInOutAnimation"
-    >
-      Đang xử lý ...
-    </span>
-      </div>
-    </ng-container
-    >
-    <div>
-  <span class="text-sm text-gray-400 mr-3">
-    <span class="mr-3"> {{ ocrNode.ocring.percent }}% </span>
-  </span>
-      <ng-container *ngIf="ocrNode.ocring.percent < 100; else success">
-        <!--        <ng-container *ngIf="!isPause; else play">-->
-        <!--        <span (click)="clickPause()" class="cursor-pointer">-->
-        <!--          <svg-->
-        <!--            class="inline text-gray-400"-->
-        <!--            fill="currentColor"-->
-        <!--            height="24"-->
-        <!--            viewBox="0 0 24 24"-->
-        <!--            width="24"-->
-        <!--            xmlns="http://www.w3.org/2000/svg"-->
-        <!--          >-->
-        <!--            <path-->
-        <!--              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"-->
-        <!--            ></path>-->
-        <!--            <path d="M13 9h2v6h-2zM9 9h2v6H9z"></path>-->
-        <!--          </svg>-->
-        <!--        </span>-->
-        <!--        </ng-container>-->
-        <!--        <ng-template #play-->
-        <!--        ><span (click)="clickPlay()" class="cursor-pointer">-->
-        <!--          <svg-->
-        <!--            class="inline text-red-400"-->
-        <!--            fill="currentColor"-->
-        <!--            height="24"-->
-        <!--            viewBox="0 0 24 24"-->
-        <!--            width="24"-->
-        <!--            xmlns="http://www.w3.org/2000/svg"-->
-        <!--          >-->
-        <!--            <path-->
-        <!--              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"-->
-        <!--            ></path>-->
-        <!--            <path d="m9 17 8-5-8-5z"></path>-->
-        <!--          </svg>-->
-        <!--        </span>-->
-        <!--        </ng-template>-->
-      </ng-container>
-      <ng-template #success>
-        <span class="cursor-pointer">
-          <svg
-            class="inline text-green-400"
-            fill="currentColor"
-            height="24"
-            viewBox="0 0 24 24"
-            width="24"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
-            ></path>
-            <path d="M9.999 13.587 7.7 11.292l-1.412 1.416 3.713 3.705 6.706-6.706-1.414-1.414z"></path>
-          </svg> </span
-        ></ng-template>
-    </div>
-  </div>
-  <mat-progress-bar mode="indeterminate" ></mat-progress-bar>
-</ng-template>
