--- a/angular-ocr/src/app/modules/pages/folder-user/tree-ocr-list/ocr-file-info/ocr-file-info.component.html
+++ b/angular-ocr/src/app/modules/pages/folder-user/tree-ocr-list/ocr-file-info/ocr-file-info.component.html
@@ -12,7 +12,7 @@
     <div class="flex justify-between border-solid border border-gray-300 h-[56px] z-10">
       <div
         class="justify-end items-center px-2 py-2 sm:px-8 sm:flex sm:flex-row-reverse p-4">
-        <button
+        <button *ngIf="showNhanDang"
           (click)="nhanDang()"
           class="
           w-full
@@ -136,7 +136,7 @@
               lg:hover:-translate-x lg:hover:scale-105
             "
         >
-          <ng-container *ngIf="!isFullSreen; else exitfullseenIcon">
+          <ng-container *ngIf="!isFullScreen; else exitfullseenIcon">
             <svg class="h-6 w-6" fill="currentColor" height="24" viewBox="0 0 24 24" width="24"
                  xmlns="http://www.w3.org/2000/svg">
               <path d="M5 5h5V3H3v7h2zm5 14H5v-5H3v7h7zm11-5h-2v5h-5v2h7zm-2-4h2V3h-7v2h5z"></path>
@@ -156,7 +156,7 @@
         <ocr-progressing [ocrNode]="ocrNode"></ocr-progressing>
       </div>
       <div *ngIf="ocrNode.page_count > 1" class="border-b border-solid border-gray-300">
-        <ocr-file-page (currentPage)="getCurrentPage($event)" [file]="ocrNode"></ocr-file-page>
+        <ocr-file-page (currentPage)="getCurrentPage($event)" [page_count]="ocrNode.page_count"></ocr-file-page>
       </div>
       <ng-container>
         <div
@@ -210,10 +210,12 @@
                   d="M12 19c.946 0 1.81-.103 2.598-.281l-1.757-1.757c-.273.021-.55.038-.841.038-5.351 0-7.424-3.846-7.926-5a8.642 8.642 0 0 1 1.508-2.297L4.184 8.305c-1.538 1.667-2.121 3.346-2.132 3.379a.994.994 0 0 0 0 .633C2.073 12.383 4.367 19 12 19zm0-14c-1.837 0-3.346.396-4.604.981L3.707 2.293 2.293 3.707l18 18 1.414-1.414-3.319-3.319c2.614-1.951 3.547-4.615 3.561-4.657a.994.994 0 0 0 0-.633C21.927 11.617 19.633 5 12 5zm4.972 10.558-2.28-2.28c.19-.39.308-.819.308-1.278 0-1.641-1.359-3-3-3-.459 0-.888.118-1.277.309L8.915 7.501A9.26 9.26 0 0 1 12 7c5.351 0 7.424 3.846 7.926 5-.302.692-1.166 2.342-2.954 3.558z"></path>
               </svg>
             </div>
-            <textarea [(ngModel)]="ocrNode.ocr.pages[this.page-1]"
+            <ng-container *ngIf="lstOcrText.length > 0">
+            <textarea [(ngModel)]="lstOcrText[this.page-1]"
                       class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full h-full sm:text-sm border border-gray-300 resize-none border rounded-lg"
                       name="textarea">
             </textarea>
+            </ng-container>
           </div>
           <div *ngIf="isShowMetadata" class=" w-full h-full relative">
             <div (click)="closeMetadta()" class="cursor-pointer absolute right-3 top-1 z-10">
@@ -232,3 +234,4 @@
     </div>
   </ng-template>
 </ng-container>
+
