--- a/angular-ocr/src/app/modules/pages/folder-user/tree-ocr-list/ocr-file-info/ocr-file-info.component.html
+++ b/angular-ocr/src/app/modules/pages/folder-user/tree-ocr-list/ocr-file-info/ocr-file-info.component.html
@@ -13,8 +13,8 @@
       <div
         class="justify-end items-center px-2 py-2 sm:px-8 sm:flex sm:flex-row-reverse p-4">
         <button *ngIf="showNhanDang"
-          (click)="nhanDang()"
-          class="
+                (click)="nhanDang()"
+                class="
           w-full
           inline-flex
           justify-center
@@ -97,7 +97,8 @@
       </div>
       <div class="items-center px-2 py-2 sm:px-8 sm:flex sm:flex-row p-4">
         <div (click)="showImg()" *ngIf="!isShowImg" class="flex items-center inline-block">
-          <input class="h-4 w-4 border-gray-300 rounded text-orange-apple-aqua-600 focus:ring-orange-500" type="checkbox">
+          <input class="h-4 w-4 border-gray-300 rounded text-orange-apple-aqua-600 focus:ring-orange-500"
+                 type="checkbox">
           <label class="ml-3 min-w-0 flex-1 text-gray-500">
             Hiển thị ảnh
           </label>
@@ -118,6 +119,33 @@
         </ng-container>
       </div>
       <div class="flex justify-end px-2 py-2">
+        <ng-container *ngIf="ocrNode.state === -1">
+          <button (click)="save()"
+                  class="
+              px-2
+              py-2
+              mr-2
+              flex
+              justify-center
+              items-center
+              w-full
+              bg-gray-200
+              rounded-md
+              focus:text-gray-900 focus:outline-none
+              transition
+              duration-500
+              ease-in-out
+              transform
+              lg:hover:-translate-x lg:hover:scale-105
+            "
+          >
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+              <path
+                d="M5 21h14a2 2 0 0 0 2-2V8a1 1 0 0 0-.29-.71l-4-4A1 1 0 0 0 16 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2zm10-2H9v-5h6zM13 7h-2V5h2zM5 5h2v4h8V5h.59L19 8.41V19h-2v-5a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v5H5z"></path>
+            </svg>
+          </button>
+
+        </ng-container>
         <button (click)="ClickFullSreen()"
                 class="
               px-2
@@ -168,29 +196,30 @@
           numberCol === 3 ? 'grid-cols-3' : '']"
           class="ml-1.5 w-[calc(100%-0.5rem)] grid  gap-2 box-border relative">
           <div #imgBox *ngIf="isShowImg" class="mx-auto my-auto relative rounded-lg">
-            <div (click)="downloadFile()" class="cursor-pointer absolute right-8 top-1">
-              <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M18.948 11.112C18.511 7.67 15.563 5 12.004 5c-2.756 0-5.15 1.611-6.243 4.15-2.148.642-3.757 2.67-3.757 4.85 0 2.757 2.243 5 5 5h1v-2h-1c-1.654 0-3-1.346-3-3 0-1.404 1.199-2.757 2.673-3.016l.581-.102.192-.558C8.153 8.273 9.898 7 12.004 7c2.757 0 5 2.243 5 5v1h1c1.103 0 2 .897 2 2s-.897 2-2 2h-2v2h2c2.206 0 4-1.794 4-4a4.008 4.008 0 0 0-3.056-3.888z"></path>
-                <path d="M13.004 14v-4h-2v4h-3l4 5 4-5z"></path>
-              </svg>
-            </div>
-            <div (click)="closeShowImg()" class="cursor-pointer absolute right-1 top-1">
-              <svg height="24" viewBox="0 0 24 24" width="24"
-                   xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M12 19c.946 0 1.81-.103 2.598-.281l-1.757-1.757c-.273.021-.55.038-.841.038-5.351 0-7.424-3.846-7.926-5a8.642 8.642 0 0 1 1.508-2.297L4.184 8.305c-1.538 1.667-2.121 3.346-2.132 3.379a.994.994 0 0 0 0 .633C2.073 12.383 4.367 19 12 19zm0-14c-1.837 0-3.346.396-4.604.981L3.707 2.293 2.293 3.707l18 18 1.414-1.414-3.319-3.319c2.614-1.951 3.547-4.615 3.561-4.657a.994.994 0 0 0 0-.633C21.927 11.617 19.633 5 12 5zm4.972 10.558-2.28-2.28c.19-.39.308-.819.308-1.278 0-1.641-1.359-3-3-3-.459 0-.888.118-1.277.309L8.915 7.501A9.26 9.26 0 0 1 12 7c5.351 0 7.424 3.846 7.926 5-.302.692-1.166 2.342-2.954 3.558z"></path>
-              </svg>
-            </div>
-            <div *ngIf="!(isImageLoading.asObservable() | async); else notFoundImage">
-              <img [alt]="ocrNode.name" [src]="imageToShow" class="h-auto w-full rounded-lg"/>
-            </div>
+            <ng-container *ngIf="!(isImageLoading.asObservable() | async); else notFoundImage">
+              <div (click)="downloadFile()" class="cursor-pointer absolute right-8 top-1">
+                <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M18.948 11.112C18.511 7.67 15.563 5 12.004 5c-2.756 0-5.15 1.611-6.243 4.15-2.148.642-3.757 2.67-3.757 4.85 0 2.757 2.243 5 5 5h1v-2h-1c-1.654 0-3-1.346-3-3 0-1.404 1.199-2.757 2.673-3.016l.581-.102.192-.558C8.153 8.273 9.898 7 12.004 7c2.757 0 5 2.243 5 5v1h1c1.103 0 2 .897 2 2s-.897 2-2 2h-2v2h2c2.206 0 4-1.794 4-4a4.008 4.008 0 0 0-3.056-3.888z"></path>
+                  <path d="M13.004 14v-4h-2v4h-3l4 5 4-5z"></path>
+                </svg>
+              </div>
+              <div (click)="closeShowImg()" class="cursor-pointer absolute right-1 top-1">
+                <svg height="24" viewBox="0 0 24 24" width="24"
+                     xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M12 19c.946 0 1.81-.103 2.598-.281l-1.757-1.757c-.273.021-.55.038-.841.038-5.351 0-7.424-3.846-7.926-5a8.642 8.642 0 0 1 1.508-2.297L4.184 8.305c-1.538 1.667-2.121 3.346-2.132 3.379a.994.994 0 0 0 0 .633C2.073 12.383 4.367 19 12 19zm0-14c-1.837 0-3.346.396-4.604.981L3.707 2.293 2.293 3.707l18 18 1.414-1.414-3.319-3.319c2.614-1.951 3.547-4.615 3.561-4.657a.994.994 0 0 0 0-.633C21.927 11.617 19.633 5 12 5zm4.972 10.558-2.28-2.28c.19-.39.308-.819.308-1.278 0-1.641-1.359-3-3-3-.459 0-.888.118-1.277.309L8.915 7.501A9.26 9.26 0 0 1 12 7c5.351 0 7.424 3.846 7.926 5-.302.692-1.166 2.342-2.954 3.558z"></path>
+                </svg>
+              </div>
+              <div>
+                <img [alt]="ocrNode.name" [src]="imageToShow" class="h-auto w-full rounded-lg"/>
+              </div>
+            </ng-container>
             <ng-template #notFoundImage>
               <mat-progress-spinner
                 color="primary"
                 mode="indeterminate">
               </mat-progress-spinner>
-              <img [alt]="ocrNode.name" class="rounded-lg">
             </ng-template>
           </div>
           <!--        <div #dragHover (cdkDragMoved)="dragMove(dragHover, $event)" cdkDrag cdkDragLockAxis="x"-->
@@ -211,7 +240,7 @@
               </svg>
             </div>
             <ng-container *ngIf="lstOcrText.length > 0">
-            <textarea [(ngModel)]="lstOcrText[this.page-1]"
+            <textarea [(ngModel)]="ocrNode.ocr.pages[this.page-1]"
                       class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full h-full sm:text-sm border border-gray-300 resize-none border rounded-lg"
                       name="textarea">
             </textarea>
