update sreach dài

--- a/angular-ocr/src/app/modules/layouts/components/header/header.component.html
+++ b/angular-ocr/src/app/modules/layouts/components/header/header.component.html
@@ -4,7 +4,7 @@
     <div class="flex justify-between items-center md:justify-start md:space-x-10 py-2">
       <nav class="md:flex flex-1 ">
         <div class="relative flex-1 justify-center">
-          <div class="max-w-lg justify-center mx-auto my-auto relative">
+          <div class="w-full justify-center mx-auto my-auto relative">
            <span class="absolute inset-y-0 left-0 flex items-center pl-2">
             <button type="submit" class="p-1 focus:outline-none focus:shadow-outline">
               <svg
@@ -30,7 +30,7 @@
           </div>
         </div>
       </nav>
-      <div class="md:flex items-center justify-end pl-6 lg:w-0 align-middle">
+      <div class="md:flex items-center justify-end pl-10 lg:w-0 align-middle">
         <app-topbar></app-topbar>
       </div>
     </div>
