--- a/angular-ocr/src/app/modules/pages/dashboard/dashboard.component.html
+++ b/angular-ocr/src/app/modules/pages/dashboard/dashboard.component.html
@@ -11,9 +11,9 @@
     <Button type="primary" class="mr-4" icon="bx-menu-w.svg">Icon</Button>
   </div>
 
-  <h2>Filter</h2>
+  <h2>Filters</h2>
   <hr/>
-  <div class="mt-4">
+  <div class="my-4">
     <DateFilter
       text="Ngày ký"
       icon="bx-calendar.svg"
@@ -26,6 +26,7 @@
       icon="bx-list-check.svg"
       class="mr-4"
       [selections]="selectionData"
+      (onChanged)="selectionChanged($event)"
     ></SelectionFilter>
 
     <NumberFilter
@@ -33,6 +34,17 @@
       icon="bx-radio-circle-marked.svg"
       [min]="6"
       [max]="30"
+      (onChanged)="numberChanged($event)"
     ></NumberFilter>
   </div>
+
+  <h2>Tree</h2>
+  <hr/>
+
+  <div class="my-4">
+    <Tree [data]="treeData" (onSelect)="treeItemSelected($event)"></Tree>
+  </div>
+
+  <h2>Table</h2>
+  <hr/>
 </div>
