update table component

--- a/angular-ocr/src/app/modules/pages/dashboard/dashboard.component.html
+++ b/angular-ocr/src/app/modules/pages/dashboard/dashboard.component.html
@@ -47,4 +47,8 @@
 
   <h2>Table</h2>
   <hr/>
+
+  <div class="my-4">
+    <Table [columns]="tableColumns" class="w-full"></Table>
+  </div>
 </div>
