--- a/angular-search/src/app/page/layout/header/header.component.html
+++ b/angular-search/src/app/page/layout/header/header.component.html
@@ -9,41 +9,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <div class="header-search-form">
-              <form>
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <button class="btn">
-                      <i class="ti-search"></i>
-                    </button>
-                  </div>
-                  <input type="text" class="form-control" placeholder="Search something...">
-                  <div class="input-group-append">
-                    <button class="btn header-search-close-btn">
-                      <i data-feather="x"></i>
-                    </button>
-                  </div>
-                </div>
-              </form>
-            </div>
+            <SearchBox></SearchBox>
           </li>
         </ul>
       </div>
 
       <div class="header-body-right">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a href="#" class="nav-link mobile-header-search-btn" title="Search">
-              <fa-icon [icon]="faBell"></fa-icon>
-              <i class="ti-search"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link" title="Dark">
-              <i class="fa fa-moon-o"></i>
-            </a>
-          </li>
-        </ul>
+        <RightNav></RightNav>
       </div>
     </div>
 
@@ -51,11 +23,6 @@
       <li class="nav-item header-toggler">
         <a href="#" class="nav-link">
           <i class="ti-arrow-down"></i>
-        </a>
-      </li>
-      <li class="nav-item sidebar-toggler">
-        <a href="#" class="nav-link">
-          <i class="ti-cloud"></i>
         </a>
       </li>
     </ul>
