--- a/angular-search/src/globals.scss
+++ b/angular-search/src/globals.scss
@@ -1,10 +1,11 @@
 $header-height: 90px;
 $navigation-width: 80px;
-$sidebar-width: 300px;
+$sidebar-width: 0px;
 $small-navigation-width: 100px;
 
 $body-bg-color-dark-light: #2b3653;
-$color-primary: #0062ff;
+
+$color-primary: #ff9500;
 $color-secondary: #a461d8;
 
 $background-primary: #FFFFFF;
